--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: The Zevy Project
+logo: /assets/img/GitHub-Mark-120px-plus.png
+description: Programming Portfolio
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-slate
