--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: The Zevy Project
-logo: /assets/img/GitHub-Mark-120px-plus.png
+logo: /assets/img/TrueFruit.jpg
 description: Programming Portfolio
 show_downloads: false
 google_analytics:
